Change location of default location of the log files to an existing directory

--- a/metplotpy/plots/config/bar_defaults.yaml
+++ b/metplotpy/plots/config/bar_defaults.yaml
@@ -25,7 +25,7 @@ legend_inset:
   y: -0.25
 legend_ncol: 3
 legend_size: 0.8
-log_filename: /tmp/bar.log
+log_filename: ../bar/bar.log
 log_level: 'DEBUG'
 line_type: N/A
 list_stat_1: []
