--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -35,7 +35,7 @@ legend_inset:
 legend_ncol: 4
 legend_size: 0.8
 
-log_filename: /tmp/taylor_diagram.log
+log_filename: ../taylor_diagram/taylor_diagram.log
 log_level: 'DEBUG'
 
 # Turn on/off plotting of specific points/series
