--- a/metplotpy/plots/config/wind_rose_defaults.yaml
+++ b/metplotpy/plots/config/wind_rose_defaults.yaml
@@ -1,6 +1,6 @@
 type: FCST
 title: Wind Rose
-log_filename: /tmp/wind_rose.log
+log_filename: ../wind_rose/wind_rose.log
 log_level: 'DEBUG'
 wind_rose_breaks:
   - 0.0
