--- a/metplotpy/plots/config/eclv_defaults.yaml
+++ b/metplotpy/plots/config/eclv_defaults.yaml
@@ -22,7 +22,7 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 line_type: N/A
-log_filename: /tmp/eclv.log
+log_filename: ../eclv/eclv.log
 log_level: 'DEBUG'
 mar:
 - 8
