--- a/metplotpy/plots/config/tcmpr_defaults.yaml
+++ b/metplotpy/plots/config/tcmpr_defaults.yaml
@@ -34,7 +34,7 @@ legend_size: 0.8
 line_type: None
 
 list_stat_1: []
-log_filename: /tmp/tcmpr.log
+log_filename: ../tcmpr/tcmpr.log
 log_level: 'DEBUG'
 
 mar:
