Fixed name of path to default log directory

--- a/metplotpy/plots/config/ens_ss_defaults.yaml
+++ b/metplotpy/plots/config/ens_ss_defaults.yaml
@@ -32,7 +32,7 @@ line_type: None
 list_stat_1: []
 list_stat_2: []
 
-log_filename: ../enss_ss/enss_ss.log
+log_filename: ../ens_ss/enss_ss.log
 log_level: 'DEBUG'
 mar:
 - 8
