--- a/metplotpy/plots/config/hist_defaults.yaml
+++ b/metplotpy/plots/config/hist_defaults.yaml
@@ -29,7 +29,7 @@ legend_ncol: 1
 legend_size: 0.8
 line_type: None
 list_stat_1: []
-log_filename: ../histogram/hist.log
+log_filename: ../histogram/rank_rel_prob_hist.log
 log_level: 'DEBUG'
 mar:
 - 8.0
