Feature internal 47 logging (#353)
* Internal Issue #47 added context filter to support adding user id to log file

* Internal Issue #47 fixed the documentation

* internal issue #47 code clean-up from linter suggestions

* internal issue #47 get the common logger

* internal issue #47 add some informational logging

* internal issue #47 add logging settings

* internal issue #47 added logging for ValueError

* internal issue #47 added informational logging and clean some issues raised by linter

* internal issue #47 added informational logging

* internal issue #47 added logging settings to default config files

* fixed fcst_var_val_1 value in taylor diagram default config

* Add taylor diagram and windrose

* simplify datetime.datetime via changing import

* internal issue #47 logging for box plot

* support lower case log levels in the config file

* internal issue #47 add logging for contour plot

* Change location of default location of the log files to an existing directory

* internal feature #47 reformatted and added logging

* Fixed name of path to default log directory

* Internal issue #47 reformatting and added logging.

* internal issue #47 added logging

* internal issue #47 add logging to the beta value checker

* internal issue #47 added logging

* internal issue #47 additional logging

* Internal issue #47 logging support added

* Internal issue #47 update tests

* Internal issue #47 support for logging

* internal issue #47

* clean up unused imports

* internal issue #47 logging changes

* fixed logger name

* internal issue #47 moved logging logic out of Config and BasePlot classes due to differences between plots in Plotly and Matplotlib

* Internal issue #47 Remove logger from this base class.  Two different loggers are required based on whether the plot is a Matplotlib or plotly plot

* internal issue #47 Remove creation of logger object to each plot since different behavior in 

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -99,6 +99,9 @@ legend_inset:
   x: 0.0
   y: -0.25
 legend_size: 0.8
+
+log_filename: ../performance_diagram/performance_diagram.log
+log_level: 'DEBUG'
 plot_stat: median
 plot_contour_legend: False
 colors:
@@ -179,5 +182,3 @@ ytlab_size: 1.3
 
 stat_input:  ../../test/performance_diagram/plot_20200317_151252.data
 plot_filename: ./performance_diagram_default.png
-
-
