--- a/metplotpy/plots/config/line_defaults.yaml
+++ b/metplotpy/plots/config/line_defaults.yaml
@@ -33,6 +33,8 @@ legend_size: 0.8
 line_type: N/A
 list_stat_1: []
 list_stat_2: []
+log_filename: ../line/line.log
+log_level: 'DEBUG'
 mar:
 - 8
 - 4
