--- a/metplotpy/plots/config/reliability_defaults.yaml
+++ b/metplotpy/plots/config/reliability_defaults.yaml
@@ -64,6 +64,8 @@ list_stat_1:
 - PSTD_BASER
 - PSTD_NI
 list_stat_2: []
+log_filename: ../reliability_diagram/reliability.log
+log_level: 'DEBUG'
 mar:
 - 8
 - 4
