--- a/metplotpy/contributed/series_analysis/series_lead_group.yaml
+++ b/metplotpy/contributed/series_analysis/series_lead_group.yaml
@@ -1,10 +1,10 @@
+
+# Data is available for download: https://dtcenter.ucar.edu/dfiles/code/METplus/METplus_Plotting_Data/series_analysis_lead_group/
 #The directory just above the Fxyz directories
-input_nc_file_dir: '/Volumes/d1/minnawin/METplus_Plotting_Data/series_analysis_lead_group'
-# on host 'kiowa', sample data is found here:
-#input_nc_file_dir: '/d1/projects/METplus/METplus_Plotting_Data/series_analysis_lead_group/'
+input_nc_file_dir: 'path-to/METplus_Plotting_Data/series_analysis_lead_group'
 
 # Output directory where final plots will be saved
-output_dir: '/Volumes/d1/minnawin/METplus_Plotting_Output/series_analysis_lead_group/output'
+output_dir: 'path-to/METplus_Plotting_Output/series_analysis_lead_group/output'
 
 #Background map with coastlines are by default turned "off", set to True to
 #draw coastlines.
