--- a/metplotpy/plots/config/box_defaults.yaml
+++ b/metplotpy/plots/config/box_defaults.yaml
@@ -25,8 +25,8 @@ line_type: None
 list_stat_1: []
 list_stat_2: []
 
-log_filename: ../box/box.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'WARNING'
 mar:
 - 8
 - 4
