--- a/metplotpy/plots/config/contour_defaults.yaml
+++ b/metplotpy/plots/config/contour_defaults.yaml
@@ -34,8 +34,8 @@ legend_ncol: 3
 legend_size: 0.8
 line_type: None
 
-log_filename: ../contour/contour.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'warning'
 mar:
 - 8.0
 - 4.0
