--- a/metplotpy/plots/config/eclv_defaults.yaml
+++ b/metplotpy/plots/config/eclv_defaults.yaml
@@ -22,8 +22,8 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 line_type: N/A
-log_filename: ../eclv/eclv.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'warning'
 mar:
 - 8
 - 4
