--- a/metplotpy/plots/config/hist_defaults.yaml
+++ b/metplotpy/plots/config/hist_defaults.yaml
@@ -29,8 +29,8 @@ legend_ncol: 1
 legend_size: 0.8
 line_type: None
 list_stat_1: []
-log_filename: ../histogram/rank_rel_prob_hist.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'WARNING'
 mar:
 - 8.0
 - 4.0
