--- a/metplotpy/plots/config/hovmoeller_defaults.yaml
+++ b/metplotpy/plots/config/hovmoeller_defaults.yaml
@@ -30,5 +30,5 @@ contour_max: 1.6
 contour_del: 0.2
 colorscale: 'BuPu'
 
-log_level: DEBUG
-log_filename: ./hovmoeller.log
+log_level: WARNING
+log_filename: stdout
