--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -100,8 +100,8 @@ legend_inset:
   y: -0.25
 legend_size: 0.8
 
-log_filename: ../performance_diagram/performance_diagram.log
-log_level: 'DEBUG'
+log_filename: STDOUT
+log_level: 'warning'
 plot_stat: median
 plot_contour_legend: False
 colors:
