--- a/metplotpy/plots/config/revision_box_defaults.yaml
+++ b/metplotpy/plots/config/revision_box_defaults.yaml
@@ -36,8 +36,8 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 list_stat_1: []
-log_filename: ../revision_box/revision_box.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'WARNING'
 mar:
 - 8.0
 - 4.0
