--- a/metplotpy/plots/config/roc_diagram_defaults.yaml
+++ b/metplotpy/plots/config/roc_diagram_defaults.yaml
@@ -50,8 +50,8 @@ legend_size: 0.8  #required
 
 line_type: N/A
 
-log_filename: ../roc_diagram/roc_diagram.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'WARNING'
 plot_disp:
   - True #required
 series_order:
