--- a/metplotpy/plots/config/tcmpr_defaults.yaml
+++ b/metplotpy/plots/config/tcmpr_defaults.yaml
@@ -34,8 +34,8 @@ legend_size: 0.8
 line_type: None
 
 list_stat_1: []
-log_filename: ../tcmpr/tcmpr.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'WARNING'
 
 mar:
   l: 0 #left margin
