--- a/metplotpy/plots/config/wind_rose_defaults.yaml
+++ b/metplotpy/plots/config/wind_rose_defaults.yaml
@@ -1,7 +1,7 @@
 type: FCST
 title: Wind Rose
-log_filename: ../wind_rose/wind_rose.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'WARNING'
 wind_rose_breaks:
   - 0.0
   - 1.0
