--- a/metplotpy/plots/config/bar_defaults.yaml
+++ b/metplotpy/plots/config/bar_defaults.yaml
@@ -25,7 +25,7 @@ legend_inset:
   y: -0.25
 legend_ncol: 3
 legend_size: 0.8
-log_filename: 'stdout'
+log_filename: stdout
 log_level: 'WARNING'
 line_type: N/A
 list_stat_1: []
