Bugfix 47 metplotpy logger (#366)
* update log filename to stdout and debug level to 'warning'

* Issue #47 Allow logfilename to be valid filename or stdout

* Issue #47 remove quotes around stdout

--- a/metplotpy/plots/config/bar_defaults.yaml
+++ b/metplotpy/plots/config/bar_defaults.yaml
@@ -25,8 +25,8 @@ legend_inset:
   y: -0.25
 legend_ncol: 3
 legend_size: 0.8
-log_filename: ../bar/bar.log
-log_level: 'DEBUG'
+log_filename: stdout
+log_level: 'WARNING'
 line_type: N/A
 list_stat_1: []
 list_stat_2: []
