--- a/metplotpy/plots/config/bar_defaults.yaml
+++ b/metplotpy/plots/config/bar_defaults.yaml
@@ -26,7 +26,7 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 log_filename: stdout
-log_level: 'WARNING'
+log_level: INFO
 line_type: N/A
 list_stat_1: []
 list_stat_2: []
