--- a/test/bar/custom_bar.yaml
+++ b/test/bar/custom_bar.yaml
@@ -140,7 +140,7 @@ plot_filename: ./bar.png
 
 # To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
 # permissions to the directory you specify.  The default, as specified in the default config file is stdout.
-#log_filename: ./hovmoeller.log
+#log_filename: ./bar.log
 
 # To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
 #  Debug and info log level will produce more log output.
