--- a/test/box/custom_box.yaml
+++ b/test/box/custom_box.yaml
@@ -183,3 +183,10 @@ ytlab_size: 1
 stat_input: ./box.data
 plot_filename: ./box.png
 
+# To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
+# permissions to the directory you specify.  The default, as specified in the default config file is stdout.
+#log_filename: ./box.log
+
+# To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
+#  Debug and info log level will produce more log output.
+#log_level: WARNING
