--- a/test/eclv/custom_eclv.yaml
+++ b/test/eclv/custom_eclv.yaml
@@ -114,3 +114,11 @@ ytlab_size: 1
 
 stat_input: ./eclv.data
 plot_filename: ./eclv.png
+
+# To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
+# permissions to the directory you specify.  The default, as specified in the default config file is stdout.
+#log_filename: ./eclv.log
+
+# To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
+#  Debug and info log level will produce more log output.
+#log_level: WARNING
