--- a/metplotpy/plots/config/hist_defaults.yaml
+++ b/metplotpy/plots/config/hist_defaults.yaml
@@ -30,7 +30,7 @@ legend_size: 0.8
 line_type: None
 list_stat_1: []
 log_filename: stdout
-log_level: 'WARNING'
+log_level: 'info'
 mar:
 - 8.0
 - 4.0
