--- a/metplotpy/plots/config/mpr_plot_defaults.yaml
+++ b/metplotpy/plots/config/mpr_plot_defaults.yaml
@@ -28,7 +28,7 @@ angularaxis_ticktext:
   - 'S'
   - 'W'
 log_filename: stdout
-log_level: 'warning'
+log_level: 'info'
 width: 1200
 height: 7500
 marker_color: 'rgb(194,189,251)'
