--- a/test/performance_diagram/minimal_performance_diagram.yaml
+++ b/test/performance_diagram/minimal_performance_diagram.yaml
@@ -7,3 +7,10 @@
 # as long as you have write permissions for the directory specified in the `plot_filename`
 # setting. Otherwise, specify an appropriate plot_filename setting here (below this comment block)
 
+# To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
+# permissions to the directory you specify.  The default, as specified in the default config file is stdout.
+#log_filename: ./default_performance_diagram.log
+
+# To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
+# The debug and info log levels will produce more log output.
+#log_level: WARNING
