--- a/test/taylor_diagram/taylor_diagram_custom.yaml
+++ b/test/taylor_diagram/taylor_diagram_custom.yaml
@@ -24,5 +24,10 @@ series_symbols:
   - "."
   - "H"
 
+# To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
+# permissions to the directory you specify.  The default, as specified in the default config file is stdout.
+#log_filename: ./taylor_diagram.log
 
-
+# To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
+# The debug and info log levels will produce more log output.
+#log_level: WARNING
