--- a/test/wind_rose/wind_rose_custom.yaml
+++ b/test/wind_rose/wind_rose_custom.yaml
@@ -44,3 +44,11 @@ dump_points: True
 # will be saved in the default location (i.e. where the input data file is stored).
 # points_path: '/dir_to_save_points1_file'
 show_in_browser: False
+
+# To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
+# permissions to the directory you specify.  The default, as specified in the default config file is stdout.
+#log_filename: ./wind_rose.log
+
+# To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
+# The debug and info log levels will produce more log output.
+#log_level: WARNING
