Modified default log level to ERROR to reduce logging messages captured in METviewer

--- a/metplotpy/plots/config/roc_diagram_defaults.yaml
+++ b/metplotpy/plots/config/roc_diagram_defaults.yaml
@@ -51,7 +51,7 @@ legend_size: 0.8  #required
 line_type: N/A
 
 log_filename: stdout
-log_level: 'INFO'
+log_level: ERROR
 plot_disp:
   - True #required
 series_order:
