--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -36,7 +36,7 @@ legend_ncol: 4
 legend_size: 0.8
 
 log_filename: STDOUT
-log_level: 'INFO'
+log_level: ERROR
 
 # Turn on/off plotting of specific points/series
 plot_disp:
