Revert "Modified default log level to ERROR to reduce logging messages captured in METviewer"
This reverts commit b273d4b5e4ea5f4153cb1c4ce0d151e34ed8eb6d.

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -101,7 +101,7 @@ legend_inset:
 legend_size: 0.8
 
 log_filename: STDOUT
-log_level: error
+log_level: 'info'
 plot_stat: median
 plot_contour_legend: False
 colors:
