--- a/test/line/custom_line_groups2.yaml
+++ b/test/line/custom_line_groups2.yaml
@@ -19,7 +19,7 @@ con_series:
 - 1
 - 1
 - 1
-create_html: 'True'
+create_html: 'False'
 derived_series_1:
 - - Group_y1_1 TMP ME
   - Group_y1_2 TMP ME
@@ -34,10 +34,7 @@ fcst_var_val_1:
   TMP:
   - ME
 fcst_var_val_2: {}
-fixed_vars_vals_input:
-  fcst_lev:
-    fcst_lev_0:
-    - Z02
+fixed_vars_vals_input: {}
 grid_col: '#cccccc'
 grid_lty: 3
 grid_lwd: 1
