Bugfix 391 fixed values (#392)
* Issue #391 utils for added fixed_vars_vals_input support

* Issue #391 tests for plot correctness. Includes data, config file, expected plot, and expected data points

* fix formatting

* Issue #391 add support to read in fixed_vars_vals_input setting

* Issue #391 perform filtering if fixed_vars_vals_input has any values defined

* issue #391 update to support the legacy format expected by METviewer when R was in use or a more simplified format for defining the fixed_vars_vals_input setting

* Issue #391 clean up tests, update config files

* issue #391 update the syntax for setting the fixed_vars_vals_input

* add issue to branch name to activate documentation workflow

* issue 391 updates to query, log when query returns an empty string

* issue #391 don't filter when the query string is an empty string

* Issue #391 remove call to non-existent logger in the create_query function

---------

Co-authored-by: Julie Prestopnik <jpresto@ucar.edu>

--- a/test/line/fbias_fixed_vars_vals.yaml
+++ b/test/line/fbias_fixed_vars_vals.yaml
@@ -10,31 +10,26 @@ caption_offset: 3.0
 caption_size: 0.8
 caption_weight: 1
 cex: 1
-circular_block_bootstrap: 'True'
 colors:
-- '#ff0000'
-- '#8000ff'
-- '#00ff7f'
+- '#ffa500'
+- '#0000ff'
 con_series:
 - 1
 - 1
-- 1
 create_html: 'False'
-derived_series_1:
-- - Group_y1_1 TMP ME
-  - Group_y1_2 TMP ME
-  - DIFF
+derived_series_1: []
 derived_series_2: []
 dump_points_1: 'True'
-dump_points_2: 'True'
-eqbound_high: 0.001
-eqbound_low: -0.001
+dump_points_2: 'False'
 event_equal: 'False'
 fcst_var_val_1:
-  TMP:
-  - ME
+  APCP_01:
+   - FBIAS
+field_equal: 'False'
 fcst_var_val_2: {}
-fixed_vars_vals_input: {}
+fixed_vars_vals_input:
+  fcst_thresh:
+    - '>0.0'
 grid_col: '#cccccc'
 grid_lty: 3
 grid_lwd: 1
@@ -42,14 +37,106 @@ grid_on: 'True'
 grid_x: listX
 indy_label:
 - '0'
+- '1'
+- '2'
+- '3'
+- '4'
+- '5'
+- '6'
+- '7'
+- '8'
+- '9'
+- '10'
+- '11'
 - '12'
+- '13'
+- '14'
+- '15'
+- '16'
+- '17'
+- '18'
+- '19'
+- '20'
+- '21'
+- '22'
+- '23'
 - '24'
-indy_stagger_1: 'False'
+- '25'
+- '26'
+- '27'
+- '28'
+- '29'
+- '30'
+- '31'
+- '32'
+- '33'
+- '34'
+- '35'
+- '36'
+- '37'
+- '38'
+- '39'
+- '40'
+- '41'
+- '42'
+- '43'
+- '44'
+- '45'
+- '46'
+- '47'
+- '48'
+indy_stagger_1: 'True'
 indy_stagger_2: 'False'
 indy_vals:
 - '0'
+- '10000'
+- '20000'
+- '30000'
+- '40000'
+- '50000'
+- '60000'
+- '70000'
+- '80000'
+- '90000'
+- '100000'
+- '110000'
 - '120000'
+- '130000'
+- '140000'
+- '150000'
+- '160000'
+- '170000'
+- '180000'
+- '190000'
+- '200000'
+- '210000'
+- '220000'
+- '230000'
 - '240000'
+- '250000'
+- '260000'
+- '270000'
+- '280000'
+- '290000'
+- '300000'
+- '310000'
+- '320000'
+- '330000'
+- '340000'
+- '350000'
+- '360000'
+- '370000'
+- '380000'
+- '390000'
+- '400000'
+- '410000'
+- '420000'
+- '430000'
+- '440000'
+- '450000'
+- '460000'
+- '470000'
+- '480000'
 indy_var: fcst_lead
 legend_box: o
 legend_inset:
@@ -57,18 +144,15 @@ legend_inset:
   y: -0.25
 legend_ncol: 3
 legend_size: 0.8
-line_type: sl1l2
+line_type: None
 list_stat_1:
-- ME
-list_stat_2: []
-list_static_val:
-  fcst_var: TMP
+- FBIAS
 mar:
 - 8
 - 4
 - 5
 - 4
-method: perc
+method: bca
 mgp:
 - 1
 - 1
@@ -79,58 +163,58 @@ plot_caption: ''
 plot_ci:
 - none
 - none
-- none
 plot_disp:
 - 'True'
 - 'True'
-- 'True'
-plot_filename: ./intermed_files/line_groups.png
+plot_filename:  ./fbias_fixed_vars.png
 plot_height: 8.5
 plot_res: 72
-plot_stat: median
+plot_stat: mean
 plot_type: png16m
 plot_units: in
 plot_width: 11.0
-points_path: ./intermed_files
+start_from_zero: True
+
+
+#Optional, uncomment and set to directory to store the .points1 file
+# that is used by METviewer (created when dump_points_1 is set to True)
+# if dump_points_1 is True and this is uncommented, the points1 file
+# will be saved in the default location (i.e. where the input data file is stored).
+points_path: ./
+
 random_seed: null
 series_line_style:
-- '-'
 - '-'
 - '-'
 series_line_width:
 - 1
 - 1
-- 1
 series_order:
 - 1
 - 2
-- 3
 series_symbols:
-- .
 - .
 - .
 series_type:
 - b
 - b
-- b
 series_val_1:
   model:
-  - GTS+RAIN3mm,GTS+RAIN4mm
-  - GTS+RAIN50p,GTS+RAIN5mm
+  - FV3_HRRR_CONUScompact_3km_noGF_mem000
+  - FV3_RAP_3km_quilt_on_shalcnv_off_mem000
 series_val_2: {}
 show_nstats: 'False'
 show_signif:
 - 'False'
 - 'False'
-- 'False'
-stat_input: ./line_groups.data
+stat_input: ./fbias_data.txt
 sync_yaxes: 'False'
-title: test title
+title: "Fixed variable fcst_thresh >0.0 for FBIAS"
 title_align: 0.5
 title_offset: -2
 title_size: 1.4
 title_weight: 2.0
-user_legend: []
+user_legend: [FV3_HRRR_CONUScompact_3km_noGF_mem000,FV3_RAP_3km_quilt_on_shalcnv_off_mem000]
 variance_inflation_factor: 'False'
 vert_plot: 'False'
 x2lab_align: 0.5
@@ -141,10 +225,10 @@ x2tlab_horiz: 0.5
 x2tlab_orient: 1
 x2tlab_perp: 1
 x2tlab_size: 0.8
-xaxis: test x_label
+xaxis: Forecast Hour
 xaxis_reverse: 'False'
 xlab_align: 0.5
-xlab_offset: 2
+xlab_offset: 2.0
 xlab_size: 1
 xlab_weight: 1
 xlim: []
@@ -153,7 +237,6 @@ xtlab_horiz: 0.5
 xtlab_orient: 1
 xtlab_perp: -0.75
 xtlab_size: 1
-y2bufr: 0.04
 y2lab_align: 0.5
 y2lab_offset: 1
 y2lab_size: 1
@@ -163,9 +246,8 @@ y2tlab_horiz: 0.5
 y2tlab_orient: 1
 y2tlab_perp: 1
 y2tlab_size: 1.0
-yaxis_1: test y_label
+yaxis_1: FBIAS for APCP_01
 yaxis_2: ''
-ybufr: 0.04
 ylab_align: 0.5
 ylab_offset: -2
 ylab_size: 1
