--- a/test/box/custom_box_defaultpoints1.yaml
+++ b/test/box/custom_box_defaultpoints1.yaml
@@ -176,4 +176,8 @@ ytlab_size: 1
 
 stat_input: ./box.data
 plot_filename: ./box_defaultpoints1.png
-
+show_legend:
+  -True
+  -True
+  -True
+  -True
