--- a/test/histogram/rel_hist.yaml
+++ b/test/histogram/rel_hist.yaml
@@ -98,3 +98,5 @@ ytlab_size: 1
 # To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
 #  Debug and info log level will produce more log output.
 #log_level: WARNING
+show_legend:
+  -True
