--- a/test/bar/custom_bar.yaml
+++ b/test/bar/custom_bar.yaml
@@ -145,3 +145,6 @@ plot_filename: ./bar.png
 # To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
 #  Debug and info log level will produce more log output.
 #log_level: WARNING
+show_legend:
+  -True
+  -True
