--- a/test/eclv/custom_eclv.yaml
+++ b/test/eclv/custom_eclv.yaml
@@ -122,3 +122,6 @@ plot_filename: ./eclv.png
 # To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
 #  Debug and info log level will produce more log output.
 #log_level: WARNING
+show_legend:
+  -True
+  -True
