--- a/test/equivalence_testing_bounds/custom_equivalence_testing_bounds2.yaml
+++ b/test/equivalence_testing_bounds/custom_equivalence_testing_bounds2.yaml
@@ -166,3 +166,7 @@ ytlab_perp: 0.5
 ytlab_size: 1
 plot_filename: ./intermed_files/equivalence_testing_bounds.png
 stat_input: ./equivalence_testing_bounds.data
+show_legend:
+- 'True'
+- 'True'
+- 'True'
