--- a/test/reliability_diagram/custom_reliability_diagram.yaml
+++ b/test/reliability_diagram/custom_reliability_diagram.yaml
@@ -170,3 +170,5 @@ ytlab_size: 1
 # To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
 # The debug and info log levels will produce more log output.
 #log_level: WARNING
+show_legend:
+- 'True'
