--- a/test/reliability_diagram/custom_reliability_points1.yaml
+++ b/test/reliability_diagram/custom_reliability_points1.yaml
@@ -184,4 +184,7 @@ plot_filename: ./intermed_files/reliability.png
 stat_input: ./reliability.data
 noskill_line_col: 'green'
 reference_line_col: 'blue'
-
+show_legend:
+- 'True'
+- 'True'
+- 'True'
