--- a/test/reliability_diagram/custom_reliability_use_defaults.yaml
+++ b/test/reliability_diagram/custom_reliability_use_defaults.yaml
@@ -181,4 +181,7 @@ ytlab_perp: 0.5
 ytlab_size: 1
 plot_filename: ./reliability.png
 stat_input: ./reliability.data
-
+show_legend:
+- 'True'
+- 'True'
+- 'True'
