--- a/test/roc_diagram/custom_roc_diagram.yaml
+++ b/test/roc_diagram/custom_roc_diagram.yaml
@@ -108,3 +108,5 @@ plot_filename: ./roc_diagram_custom.png
 # To change the log level, specify a log level: debug, info, warning, error and uncomment the line below.
 # The debug and info log levels will produce more log output.
 #log_level: WARNING
+show_legend:
+- 'True'
