add ROC summary curve parameter #399

--- a/metplotpy/plots/config/roc_diagram_defaults.yaml
+++ b/metplotpy/plots/config/roc_diagram_defaults.yaml
@@ -115,3 +115,6 @@ reverse_connection_order: False
 create_html: True  #optional
 stat_input:  ../../test/roc_diagram/plot_20200507_074426.data #required
 plot_filename: ./roc_diagram_default.png #required
+
+summary_curve: none
+
