--- a/test/tcmpr_plots/tcmpr_multi_plots.yaml
+++ b/test/tcmpr_plots/tcmpr_multi_plots.yaml
@@ -137,6 +137,9 @@ prefix: ''
 subtitle:
 log_level: INFO
 log_filename: '/path/to/log/output/tcmpr_log.out'
+baseline_file: 'path/to/metplotpy/plots/tcmpr_plots/hfip_baseline.dat'
+column_info_file: 'path/to/metplotpy/plots/tcmpr_plots/plot_tcmpr_hdr.dat'
+
 
 
 
