issue #383 explicitly set hfip_bsln to 'no'

--- a/test/tcmpr_plots/tcmpr_multi_plots.yaml
+++ b/test/tcmpr_plots/tcmpr_multi_plots.yaml
@@ -139,6 +139,7 @@ log_level: INFO
 log_filename: '/path/to/log/output/tcmpr_log.out'
 baseline_file: 'path/to/metplotpy/plots/tcmpr_plots/hfip_baseline.dat'
 column_info_file: 'path/to/metplotpy/plots/tcmpr_plots/plot_tcmpr_hdr.dat'
+hfip_bsln: 'no'
 
 
 
