explicitly set hfip_bsln to no in testing

--- a/test/tcmpr_plots/test_tcmpr_multi_plots.yaml
+++ b/test/tcmpr_plots/test_tcmpr_multi_plots.yaml
@@ -140,6 +140,7 @@ log_level: INFO
 log_filename: './output/tcmpr_log.out'
 baseline_file: './metplotpy/plots/tcmpr_plots/hfip_baseline.dat'
 column_info_file: './metplotpy/plots/tcmpr_plots/plot_tcmpr_hdr.dat'
+hfip_bsln: 'no'
 
 
 
