Added two settings to support line plot for TCDiag data

--- a/metplotpy/plots/config/tcmpr_defaults.yaml
+++ b/metplotpy/plots/config/tcmpr_defaults.yaml
@@ -145,3 +145,5 @@ subtitle: ''
 prefix:
 baseline_file: ./hfip_baseline.dat
 column_info_file: ./plot_tcmpr_hdr.dat
+is_tcdiag_linetype: False
+connect_points: False
