--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -25,7 +25,8 @@ colors:
   - "#1500ff" # royal blue
   - "#7f00ff" # purple
 
-fcst_var_val_1: {DLWRF}
+# Not supported, set as fcst_var under the series_val_1 setting
+fcst_var_val_1: {}
 
 legend_box: 'box'
 
@@ -90,6 +91,8 @@ series_val_1:
     - Penn_State
     - Sioux_Falls
     - Table_Mountain
+  fcst_var:
+    - DLWRF
 
 # input file
 stat_input: ../../../test/taylor_diagram/plot_dlwr_sample.data
