--- a/metplotpy/plots/config/scatter_defaults.yaml
+++ b/metplotpy/plots/config/scatter_defaults.yaml
@@ -1,42 +1,25 @@
-alpha: 0.05
 caption_align: 0.0
 caption_col: '#333333'
 caption_offset: 3
 caption_size: 0.8
 caption_weight: 1
-cex: 1
-# Colors for the range of values (colormap) for columns of interest (point_by_value).
-# By default, use the gist_ncar colormap for the model values
-colormap: 'gist_ncar'
-point_by_value:
-  - model
-colors: []
-con_series: []
-derived_series_1: []
-derived_series_2: []
-dump_points_1: 'False'
-event_equal: 'False'
-fcst_var_val_1: {}
-fcst_var_val_2: {}
+
+dump_points: 'False'
+fcst_var: TMP
 fixed_vars_vals_input: {}
 grid_col: '#f5274a'
 grid_lty: 3
 grid_lwd: 1
 grid_on: 'True'
-grid_x: listX
 indy_stagger_1: 'False'
-indy_stagger_2: 'False'
 indy_vals: []
 indy_var: ''
 legend_box: o
+legend_ncol: 3
+legend_size: 0.8
 legend_inset:
   x: 0.0
   y: -0.25
-legend_ncol: 3
-legend_size: 0.8
-line_type: N/A
-list_stat_1: []
-list_stat_2: []
 log_filename: stdout
 log_level: ERROR
 mar:
@@ -44,53 +27,28 @@ mar:
 - 4
 - 5
 - 4
-method: ''
-mgp:
-- 1
-- 1
-- 0
-num_iterations: 1
-num_threads: -1
+# Supported symbols: ., o, ^, d, H, or s (d=diamond, H=hexagon, s=square)
+marker_symbol: .
+# Colors for the range of values (colormap) for variable of interest (variable_val_by_color).
+marker_colormap: 'gist_ncar'
+marker_size: 5
 points_path: ./
-plot_caption: 'Caption'
-plot_ci: []
-plot_disp: []
-plot_filename: ./line_default.png
+plot_caption: 'Caption for scatter plot'
+plot_filename: ./scatter_default.png
 plot_height: 8.5
-plot_res: 72
-plot_stat: median
-plot_type: png16m
-plot_units: in
 plot_width: 11.0
-random_seed: null
-series_line_style: []
-series_line_width: []
-series_order: []
-series_symbols: []
-series_type: []
-series_val_1: {}
-series_val_2: {}
-show_nstats: 'False'
-show_signif: []
+show_legend: 'True'
+show_trend_line: 'False'
 start_from_zero: 'False'
 stat_input: ../../../test/scatter/scatter.data
-sync_yaxes: 'False'
 title: test title
 title_align: 0.5
 title_offset: -2
 title_size: 1.4
 title_weight: 2.0
 user_legend: []
-variance_inflation_factor: 'True'
-vert_plot: 'False'
-x2lab_align: 0.5
-x2lab_offset: -0.5
-x2lab_size: 0.8
-x2lab_weight: 1
-x2tlab_horiz: 0.5
-x2tlab_orient: 1
-x2tlab_perp: 1
-x2tlab_size: 0.8
+var_val_x_axis: FCST
+var_val_y_axis: OBS
 xaxis: test x_label
 xaxis_reverse: 'False'
 xlab_align: 0.5
@@ -98,22 +56,10 @@ xlab_offset: 2
 xlab_size: 1
 xlab_weight: 1
 xlim: []
-xtlab_decim: 0
 xtlab_horiz: 0.5
 xtlab_orient: 1
-xtlab_perp: -0.75
 xtlab_size: 1
-y2lab_align: 0.5
-y2lab_offset: 1
-y2lab_size: 1
-y2lab_weight: 1
-y2lim: []
-y2tlab_horiz: 0.5
-y2tlab_orient: 1
-y2tlab_perp: 1
-y2tlab_size: 1.0
-yaxis_1: test y_label
-yaxis_2: ''
+yaxis: test y_label
 ylab_align: 0.5
 ylab_offset: -2
 ylab_size: 1
@@ -121,5 +67,9 @@ ylab_weight: 1
 ylim: []
 ytlab_horiz: 0.5
 ytlab_orient: 1
-ytlab_perp: 0.5
 ytlab_size: 1
+
+
+# Not used by the scatter plot, but needed to satisfy the base config class
+plot_units: in
+plot_res: 72
