--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -59,6 +59,9 @@ jobs:
     - name: Test with pytest
       run: |
           cd test
+          cd scatter
+          pytest test_scatter.py
+          cd ../bar
           cd bar 
           pytest test_bar.py
           cd ../box
@@ -92,8 +95,7 @@ jobs:
           pytest test_rel_hist.py
           cd ../tcmpr_plots
           pytest --capture=fd test_tcmpr_plots.py
-          cd ../scatter
-          pytest test_scatter.py
+          
 
           
          
